<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HabReader</string>
    <string name="posts">Посты</string>
    <string name="qa">Q&amp;A</string>
    <string name="blogs">Блоги</string>
    <string name="events">События</string>
    <string name="companies">Компании</string>
    <string name="people">Люди</string>
    <string name="job">Работа</string>
    <string name="preferences">Настройки</string>
    <string name="about">О приложении</string>
    <string name="nick">Ник</string>
    <string name="search">Поиск</string>
    <string name="preferences_base">Общие настройки</string>
    <string name="preferences_vibrate">Включить вибрацию</string>
    <string name="loading_people_list">Загрузка списка пользователей</string>
    <string name="loading_companies_list">Загрузка списка компаний</string>
    <string name="loading_events_list">Загрузка списка событий</string>
    <string name="loading_qa_list">Загрузка списка вопросов</string>
    <string name="loading_blogs_list">Загрузка списка блогов</string>
    <string name="loading_posts_list">Загрузка списка постов</string>
    <string name="loading_qa_show">Загрузка вопроса</string>
    <string name="show_in_browser">Просмотреть в браузере</string>
    <string name="share">Поделиться</string>
    <string name="share_link_qa">Вопрос на Habrahabr.ru</string>
    <string name="share_link_post">Пост на Habrahabr.ru</string>
    <string name="share_link_event">Мероприятие на Habrahabr.ru</string>
    <string name="rate_application">Оценить приложение</string>
    <string name="version">Версия</string>
    <string name="preferences_fullscreen">Полноэкранный режим</string>
    <string name="preferences_keep_screen">Не выключать экран</string>
    <string name="preferences_fullscreen_summary">Потребуется перезапуск приложения</string>
    <string name="preferences_fullscreen_summary_1">Для применения этой настройки требуется перезапуск приложения</string>
    <string name="preferences_personal">Личные данные</string>
    <string name="preferences_sign_in">Авторизация</string>
    <string name="preferences_sign_in_1">Попытка авторизации</string>
    <string name="preferences_send_review">Отправить отзыв</string>
    <string name="preferences_share">Рассказать друзьям</string>
    <string name="preferences_share_text">Я использую приложение #HabReader для чтения Habrahabr.ru - %s</string>
    <string name="preferences_use_tablet_design">Использовать дизайн для планшетов</string>
    <string name="preferences_use_tablet_design_summary">Настройка работает только на смартфонах</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Вход</string>
    <string name="preferences_enable_flash_posts">Включить Flash</string>
    <string name="loading_man_show">Загрузка данных хабра пользователя</string>
	<string name="loading_post_show">Загрузка поста</string>
	<string name="comments">Комментарии</string>
	<string name="loading_comments">Загрузка комментариев</string>
	<string name="small_posts_widget">HabReader посты(маленький)</string>
	<string name="widget_error">Нет доступного поста. Возникли проблемы с подключением.</string>
	<string name="preferences_use_habrahabr_css">Использовать CSS стили Habrahabr</string>
	<string name="add_to_favorites">Добавить в закладки</string>
	<string name="other_applications">Другие приложения</string>
	<string name="loading_events_show">Загрузка события</string>
	<string name="events_widget">HabReader события</string>
	<string name="to_home">Домой</string>
	<string name="loading_companies_show">Загрузка компании</string>
	<string name="place_undefined">Страна не указана</string>
	<string name="posts_search">Поиск по постам</string>
	<string name="preferences_roaming">Разрешить работу в роуминге</string>
	<string name="preferences_3g">Разрешить использование мобильного интернета</string>
	<string name="preferences_network">Сеть</string>
	<string name="attention">Внимание</string>
	<string name="attention_use_3g">Вы запретили приложению использовать мобильный интернет</string>
	<string name="continue_anyway">Игнорировать</string>
	<string name="cancel">Отмена</string>
	<string name="attention_roaming">Вы запретили приложению использовать мобильный интернет в роуминге</string>
	<string name="profile">Профиль</string>
	<string name="people_no_info">Нет информации</string>
	<string name="all_posts">Все посты</string>
	<string name="new_posts">Новые посты</string>
	<string name="show_comments">Показать комментарии</string>
	<string name="share">Поделиться с друзьями</string>
	<string name="update">Обновить</string>
	<string name="no_posts">Постов нет</string>
	<string name="more">Подробнее</string>
	<string name="attention_no_network_connection">Отсутствует подключение к сети.</string>
</resources>