<?xml version="1.0" encoding="utf-8"?>
<net.meiolania.apps.habrahabr.ui.widgets.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dashboard_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/posts"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_posts"
        android:onClick="clickDashboardButton"
        android:text="@string/posts" />

    <Button
        android:id="@+id/blogs"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_blogs"
        android:onClick="clickDashboardButton"
        android:text="@string/blogs" />

    <Button
        android:id="@+id/qa"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_qa"
        android:onClick="clickDashboardButton"
        android:text="@string/qa" />

    <Button
        android:id="@+id/events"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_events"
        android:onClick="clickDashboardButton"
        android:text="@string/events" />

    <Button
        android:id="@+id/companies"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_companies"
        android:onClick="clickDashboardButton"
        android:text="@string/companies" />

    <Button
        android:id="@+id/people"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/dash_ic_people"
        android:onClick="clickDashboardButton"
        android:text="@string/people" />

</net.meiolania.apps.habrahabr.ui.widgets.DashboardLayout>